<resources>
    <string name="app_name">ADMIC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Inicia Sesión</string>
    <string name="mensaje_bienvenida">En Fondo Guanajuato ADMIC León A.C. somos una organización del sector privado cuyo objetivo principal es ofrecer un programa de desarrollo integral a la micro empresa de la localidad que tiene expectativas de crecimiento, para que de ésta forma se fortalezca logrando niveles propios de crecimiento, desarrollo, y funcione como fuente generadora de empleos.</string>
    <string name="home">Home</string>
    <string name="bienvenida">EN ADMIC, APOYAMOS TU PROYECTO</string>
    <string name="comenzar">Comenzar</string>
    <string name="registrar">Registrar</string>
    <string name="copyright">Copyright © \nADMIC 2017.</string>
    <string name="inicio">Inicio</string>
    <string name="pass">Contraseña</string>
    <string name="ejercicio">Ejercicio</string>
    <string name="password_hint">Contraseña</string>
    <string name="nuevousuario_diagnostico">Registra tu Usuario</string>
    <string name="hidratacion_diaria">Hidratación diaria</string>
    <string name="ejercicio_diario">Ejercicio Diario</string>
    <string name="agua">Agua</string>
    <string name="recuperarpass"><u>Recuperar contraseña</u></string>
    <string name="recuperarpass2">Recuperar contraseña</string>
    <string name="mi_perfil">Modificar perfil</string>
    <string name="registrar_agua">Registrar agua</string>
    <string name="colaboradores">Colaboradores</string>
    <string name="redes_sociales">Redes sociales</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_email">Email</string>
    <string name="hint_passwordconfirmar">Confirmar Contraseña</string>
    <string name="facebook_app_id">1547755481949405</string>
    <string name="fb_login_protocol_scheme">fb1547755481949405</string>
    <string name="api_key">AIzaSyDKAbShlitmin_wsoxRxHLmdi7Ieynn3cY</string>
    <string name="datos_usuario">Datos de usuario</string>
    <string name="title_activity_segunda">SegundaActivity</string>
    <string name="meta_hidratacion_diaria">Meta de hidratación diaria</string>
    <string name="registro_agua">Registro de agua</string>
    <string name="registro_ejercicio">Registro de ejercicio</string>
    <string name="actividades">Actividades</string>
    <string name="calendario">Calendario de eventos</string>
    <string name="alarmas">Alarmas de activación</string>
    <string name="ver_reportes">Ver reportes</string>
    <string name="general">General</string>
    <string name="directorio_code">Instalaciones deportivas</string>
    <string name="inicio_sesion">Inicio de sesión</string>
    <string name="registro">Registro</string>
    <string name="reportes">Reportes</string>
    <string name="login_google">Google</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="recuperacion_codigo">Introduce el código de recuperación que ha sido enviado a tu correo.</string>
    <string name="nuevo_password">Nueva contraseña</string>
    <string name="confirmar_password">Confirmar contraseña</string>
    <string name="reestablecer_pass">Reestablecer contraseña</string>
    <string name="reenviar_codigo">Volver a enviar código</string>
    <string name="enviar_codigo">Enviar código</string>
    <string name="olvidaste">¿Olvidaste tu contraseña?</string>
    <string name="colaborador1">Ing. Felipe Uriel Infante Martínez</string>
    <string name="lider">Líder de desarrollo en Android</string>
    <string name="correo1">ur13l.infante@gmail.com</string>
    <string name="colaborador2">José María Cruz Parada</string>
    <string name="desarrollador">Desarrollador en Android</string>
    <string name="correo2">chema-cruz@live.com</string>
    <string name="presion">¿Te conoces con presión elevada?</string>
    <string name="glucosa">¿Te conoces con glucosa elevada?</string>
    <string name="actividad">¿Realizas alguna actividad física?</string>
    <string name="peso_actual">Introduce tu peso actual</string>
    <string name="estatura_actual">Introduce tu estatura actual</string>
    <string name="estado_animo">Estado de ánimo</string>
    <string name="kg">kg</string>
    <string name="m">m</string>
    <string name="introduce">Responde a las siguientes preguntas</string>
    <string name="datos_complementarios">Datos complementarios</string>
    <string name="retos">Retos</string>
    <string name="eventos">Eventos</string>
    <string name="politica"><u>Política de privacidad</u></string>
    <string name="eliminar">Eliminar</string>
    <string name="selecciona_accion">Selecciona la acción.</string>
    <string name="no_alarmas">No hay alarmas registradas</string>
    <string name="mar">M</string>
    <string name="lun">L</string>
    <string name="dom">D</string>
    <string name="sab">S</string>
    <string name="vie">V</string>
    <string name="jue">J</string>
    <string name="mie">M</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_video_activacion">Video de activación</string>
    <string name="empty">No hay eventos registrados.</string>
    <string name="emptyDir">No se encontró ningún resultado.</string>
    <string name="conocenos_que_hacemos">¿Quienes somos?</string>
    <string name="conocenos_descripcion">Somos una organización del sector privado, nuestro principal objetivo es ofrecer un PROGRAMA INTEGRAL DE ASESORÍA, CAPACITACIÓN Y CRÉDITO A LA MICRO Y LA PEQUEÑA EMPRESA para que de esta forma se FORTALEZCA Y LOGRE CRECIMIENTO Y DESARROLLO.</string>
    <string name="conocenos_titulo_logros_estadisticas">Asesorias</string>
    <string name="logro1">• 	Controles administrativos.</string>
    <string name="logro2">•  Diseño de imagen.</string>
    <string name="logro3">•  Control de costos.</string>
    <string name="logro4">•  Sondeo de mercado, etc.</string>
    <string name="asesorias">Ofrecemos soluciones prácticas y concretas para mejorar y/o fortalecer las principales áreas de oportunidad en tu empresa.
Como pueden ser:
</string>
    <string name="conocenos_titulo_capacitacion">Capacitación</string>
    <string name="capacitacion">Capacitación básica con la oportunidad de conocer y aplicar de manera sencilla y práctica en temas relacionados con el negocio, la persona y la familia.</string>
    <string name="capacitacion1">•	Trabajo en equipo.</string>
    <string name="capacitacion2">•	Atención a clientes.</string>
    <string name="capacitacion3">•	Desarrollo humano.</string>
    <string name="capacitacion4">•	Liderazgo, etc.</string>
    <string name="conocenos_titulo_credito">Crédito</string>
    <string name="credito">Después de analizar juntos sus necesidades y definir sus proyectos de crecimiento y expansión, evaluamos la posibilidad de otorgarle un crédito el cual puede ser utilizado para:</string>
    <string name="credito1">•	Surtir mercancía.</string>
    <string name="credito2">•	Compra de herramienta.</string>
    <string name="credito3">•	Compra de maquinaria.</string>
    <string name="credito4">•	Compra de equipo.</string>
    <string name="credito5">•	Ampliar o mejorar las instalaciones.</string>
</resources>